--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="uk.co.tezk.trainspotter">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:name=".TrainSpotterApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
