--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,27 +33,33 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     // Retrofit
+    //  compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    // dagger
+    // compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
-  //  compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    testCompile 'org.mockito:mockito-core:2.7.22'
-    androidTestCompile 'org.mockito:mockito-android:2.7.22'
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'com.squareup.okhttp3:okhttp:3.4.0-RC1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.0-RC1'
-    // dagger
     compile 'com.google.dagger:dagger:2.0'
-    provided 'com.google.dagger:dagger-compiler:2.0'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
-   // compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.4'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.7.22'
+    androidTestCompile 'org.mockito:mockito-android:2.7.22'
+    provided 'com.google.dagger:dagger-compiler:2.0'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    // ButterKnife
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    // Better picker for Calendar picker
+    compile 'com.code-troopers.betterpickers:library:3.1.0'
 }
