--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.google.android.gms:play-services-maps:10.2.4'
-    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.4'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.7.22'
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
@@ -63,4 +63,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     // Better picker for Calendar picker
     compile 'com.code-troopers.betterpickers:library:3.1.0'
+    // Firebase messaging
+    compile 'com.google.firebase:firebase-messaging:10.2.4'
+
 }
+apply plugin: 'com.google.gms.google-services'
