--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,28 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    })
+    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude module: 'design'
+    })
+    androidTestCompile ('com.android.support.test.espresso:espresso-intents:2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
     })
     // Retrofit
-    //  compile 'io.reactivex.rxjava2:rxjava:2.1.0'
-    // dagger
-    // compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    //  compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+    // dagger
+
+    // compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.code.gson:gson:2.8.0'
