--- a/android-21-circle.yml
+++ b/android-21-circle.yml
@@ -13,6 +13,8 @@ machine:
         ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
+    pre:
+        - echo y | android update sdk --no-ui --all --filter "android-24, build-tools-25.0.3"
     override:
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
